src/ForgeMission.Core/Parser/Generated/FmsGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/ameerdeen/progs/fml/src/ForgeMission.Core/Parser/FmsGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ForgeMission.Core.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FmsGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		USE=1, LET=2, MISSION=3, EXPERT=4, WITH=5, ENV=6, OUTPUT=7, LOOP=8, INT=9, 
		PIPE=10, EQUALS=11, LPAREN=12, RPAREN=13, LBRACE=14, RBRACE=15, COMMA=16, 
		UPPER_ID=17, LOWER_ID=18, STRING=19, WS=20;
	public const int
		RULE_program = 0, RULE_useDecl = 1, RULE_letBinding = 2, RULE_declaration = 3, 
		RULE_outputDecl = 4, RULE_mission = 5, RULE_loopClause = 6, RULE_expert = 7, 
		RULE_params = 8, RULE_pipeline = 9, RULE_step = 10, RULE_withClause = 11, 
		RULE_binding = 12, RULE_value = 13, RULE_envCall = 14;
	public static readonly string[] ruleNames = {
		"program", "useDecl", "letBinding", "declaration", "outputDecl", "mission", 
		"loopClause", "expert", "params", "pipeline", "step", "withClause", "binding", 
		"value", "envCall"
	};

	private static readonly string[] _LiteralNames = {
		null, "'use'", "'let'", "'mission'", "'expert'", "'with'", "'env'", "'output'", 
		"'loop'", null, "'|>'", "'='", "'('", "')'", "'{'", "'}'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "USE", "LET", "MISSION", "EXPERT", "WITH", "ENV", "OUTPUT", "LOOP", 
		"INT", "PIPE", "EQUALS", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", 
		"UPPER_ID", "LOWER_ID", "STRING", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FmsGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FmsGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FmsGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FmsGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FmsGrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UseDeclContext[] useDecl() {
			return GetRuleContexts<UseDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UseDeclContext useDecl(int i) {
			return GetRuleContext<UseDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext[] letBinding() {
			return GetRuleContexts<LetBindingContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LetBindingContext letBinding(int i) {
			return GetRuleContext<LetBindingContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputDeclContext[] outputDecl() {
			return GetRuleContexts<OutputDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OutputDeclContext outputDecl(int i) {
			return GetRuleContext<OutputDeclContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==USE) {
				{
				{
				State = 30;
				useDecl();
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 156L) != 0)) {
				{
				State = 39;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LET:
					{
					State = 36;
					letBinding();
					}
					break;
				case MISSION:
				case EXPERT:
					{
					State = 37;
					declaration();
					}
					break;
				case OUTPUT:
					{
					State = 38;
					outputDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 43;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 44;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UseDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(FmsGrammarParser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(FmsGrammarParser.STRING, 0); }
		public UseDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_useDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterUseDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitUseDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUseDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UseDeclContext useDecl() {
		UseDeclContext _localctx = new UseDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_useDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			Match(USE);
			State = 47;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetBindingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LET() { return GetToken(FmsGrammarParser.LET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOWER_ID() { return GetToken(FmsGrammarParser.LOWER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(FmsGrammarParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public LetBindingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letBinding; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitLetBinding(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetBinding(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetBindingContext letBinding() {
		LetBindingContext _localctx = new LetBindingContext(Context, State);
		EnterRule(_localctx, 4, RULE_letBinding);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			Match(LET);
			State = 50;
			Match(LOWER_ID);
			State = 51;
			Match(EQUALS);
			State = 52;
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MissionContext mission() {
			return GetRuleContext<MissionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpertContext expert() {
			return GetRuleContext<ExpertContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaration);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case MISSION:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				mission();
				}
				break;
			case EXPERT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 55;
				expert();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OutputDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OUTPUT() { return GetToken(FmsGrammarParser.OUTPUT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FmsGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(FmsGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FmsGrammarParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(FmsGrammarParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(FmsGrammarParser.STRING, 0); }
		public OutputDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_outputDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterOutputDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitOutputDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutputDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OutputDeclContext outputDecl() {
		OutputDeclContext _localctx = new OutputDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_outputDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(OUTPUT);
			State = 59;
			Match(LPAREN);
			State = 60;
			Match(UPPER_ID);
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA) {
				{
				State = 61;
				Match(COMMA);
				State = 62;
				Match(STRING);
				}
			}

			State = 65;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MissionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MISSION() { return GetToken(FmsGrammarParser.MISSION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(FmsGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(FmsGrammarParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopClauseContext loopClause() {
			return GetRuleContext<LoopClauseContext>(0);
		}
		public MissionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mission; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterMission(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitMission(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMission(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MissionContext mission() {
		MissionContext _localctx = new MissionContext(Context, State);
		EnterRule(_localctx, 10, RULE_mission);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(MISSION);
			State = 68;
			Match(UPPER_ID);
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 69;
				@params();
				}
			}

			State = 72;
			Match(EQUALS);
			State = 73;
			pipeline();
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LOOP) {
				{
				State = 74;
				loopClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoopClauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOOP() { return GetToken(FmsGrammarParser.LOOP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(FmsGrammarParser.INT, 0); }
		public LoopClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_loopClause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterLoopClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitLoopClause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLoopClause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LoopClauseContext loopClause() {
		LoopClauseContext _localctx = new LoopClauseContext(Context, State);
		EnterRule(_localctx, 12, RULE_loopClause);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			Match(LOOP);
			State = 78;
			Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpertContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXPERT() { return GetToken(FmsGrammarParser.EXPERT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(FmsGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(FmsGrammarParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		public ExpertContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expert; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterExpert(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitExpert(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpert(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpertContext expert() {
		ExpertContext _localctx = new ExpertContext(Context, State);
		EnterRule(_localctx, 14, RULE_expert);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			Match(EXPERT);
			State = 81;
			Match(UPPER_ID);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LPAREN) {
				{
				State = 82;
				@params();
				}
			}

			State = 85;
			Match(EQUALS);
			State = 86;
			pipeline();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(FmsGrammarParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LOWER_ID() { return GetTokens(FmsGrammarParser.LOWER_ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LOWER_ID(int i) {
			return GetToken(FmsGrammarParser.LOWER_ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(FmsGrammarParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(FmsGrammarParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(FmsGrammarParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_params; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterParams(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitParams(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParams(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamsContext @params() {
		ParamsContext _localctx = new ParamsContext(Context, State);
		EnterRule(_localctx, 16, RULE_params);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			Match(LPAREN);
			State = 89;
			Match(LOWER_ID);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 90;
				Match(COMMA);
				State = 91;
				Match(LOWER_ID);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 97;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PipelineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StepContext[] step() {
			return GetRuleContexts<StepContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StepContext step(int i) {
			return GetRuleContext<StepContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PIPE() { return GetTokens(FmsGrammarParser.PIPE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PIPE(int i) {
			return GetToken(FmsGrammarParser.PIPE, i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pipeline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPipeline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PipelineContext pipeline() {
		PipelineContext _localctx = new PipelineContext(Context, State);
		EnterRule(_localctx, 18, RULE_pipeline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			step();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PIPE) {
				{
				{
				State = 100;
				Match(PIPE);
				State = 101;
				step();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StepContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UPPER_ID() { return GetToken(FmsGrammarParser.UPPER_ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WithClauseContext withClause() {
			return GetRuleContext<WithClauseContext>(0);
		}
		public StepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_step; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.EnterStep(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IFmsGrammarListener typedListener = listener as IFmsGrammarListener;
			if (typedListener != null) typedListener.ExitStep(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFmsGrammarVisitor<TResult> typedVisitor = visitor as IFmsGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStep(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepContext step() {
		StepContext _localctx = new StepContext(Context, State);
		EnterRule(_localctx, 20, RULE_step);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(UPPER_ID);
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WITH) {
				{
				State = 108;
				withClause();
				}
			}
